basic implementations for task 1.

--- a/A2/NLP_Assignment2.ipynb
+++ b/A2/NLP_Assignment2.ipynb
@@ -164,8 +164,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-13T13:15:31.648600Z",
-     "start_time": "2025-11-13T13:15:31.622973Z"
+     "end_time": "2025-11-13T13:56:25.079883Z",
+     "start_time": "2025-11-13T13:56:25.052103Z"
     }
    },
    "source": [
@@ -258,36 +258,144 @@
     "\n",
     "    def stats(self):\n",
     "        print(f\"Vocab size (with OOV): {len(self.token2idx)}\")\n",
-    "        print(f\"Most common tokens: {self.freqs.most_common(5)}\")"
+    "        print(f\"Most common tokens: {self.freqs.most_common(5)}\")\n",
+    "        \n",
+    "        \n",
+    "class Vectorizer:\n",
+    "    \"\"\"\n",
+    "    Converts tokenized text → document-term matrices.\n",
+    "    Provides TF and TF-IDF weighting (manual implementation).\n",
+    "    \"\"\"\n",
+    "    def __init__(self, vocab: Vocabulary):\n",
+    "        self.vocab = vocab\n",
+    "\n",
+    "    def build_term_matrix(self, tokenized_texts: List[List[str]]) -> np.ndarray:\n",
+    "        num_docs = len(tokenized_texts)\n",
+    "        vocab_size = len(self.vocab.token2idx)\n",
+    "        mat = np.zeros((num_docs, vocab_size), dtype=np.float32)\n",
+    "\n",
+    "        for i, tokens in enumerate(tokenized_texts):\n",
+    "            for tok in tokens:\n",
+    "                idx = self.vocab.token2idx.get(tok, 0)\n",
+    "                mat[i, idx] += 1\n",
+    "        return mat\n",
+    "\n",
+    "    def compute_tf(self, counts: np.ndarray) -> np.ndarray:\n",
+    "        doc_lengths = counts.sum(axis=1, keepdims=True) + 1e-9\n",
+    "        return counts / doc_lengths\n",
+    "\n",
+    "    def compute_idf(self, counts: np.ndarray) -> np.ndarray:\n",
+    "        num_docs = counts.shape[0]\n",
+    "        df = np.count_nonzero(counts > 0, axis=0)\n",
+    "        idf = np.log((num_docs + 1) / (df + 1)) + 1\n",
+    "        return idf\n",
+    "\n",
+    "    def compute_tfidf(self, counts: np.ndarray) -> np.ndarray:\n",
+    "        tf = self.compute_tf(counts)\n",
+    "        idf = self.compute_idf(counts)\n",
+    "        return tf * idf\n",
+    "\n",
+    "    def compute_sparsity(self, mat: np.ndarray) -> float:\n",
+    "        zeros = np.sum(mat == 0)\n",
+    "        total = mat.size\n",
+    "        return 100.0 * zeros / total"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-13T13:16:01.375027Z",
-     "start_time": "2025-11-13T13:16:00.620028Z"
+     "end_time": "2025-11-13T13:54:00.211414Z",
+     "start_time": "2025-11-13T13:53:58.359778Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "train_dataset = TextDataset(\"train.csv\", \"tweet\", \"label\")\n",
+    "prep = Preprocessor()\n",
+    "train_dataset = TextDataset(\"train.csv\", \"tweet\", \"label\", transform=prep)\n",
     "vocab = Vocabulary()\n",
     "vocab.build([t for t, _ in train_dataset])\n",
-    "vocab.stats()\n"
+    "vocab.stats()"
    ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocab size (with OOV): 194\n",
-      "Most common tokens: [(' ', 920265), ('e', 387204), ('t', 293876), ('a', 283539), ('o', 280605)]\n"
+      "Vocab size (with OOV): 17064\n",
+      "Most common tokens: [('the', 23882), ('to', 19257), ('a', 16384), ('i', 15817), ('and', 12134)]\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 20
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-13T13:57:32.358415Z",
+     "start_time": "2025-11-13T13:56:26.655768Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "vec = Vectorizer(vocab)\n",
+    "train_term_matrix = vec.build_term_matrix(train_dataset.get_texts())\n",
+    "\n",
+    "# TF and TF-IDF\n",
+    "train_tf     = vec.compute_tf(train_term_matrix)\n",
+    "train_tfidf  = vec.compute_tfidf(train_term_matrix)\n",
+    "\n",
+    "# Sparsity\n",
+    "sparsity_tf    = vec.compute_sparsity(train_tf)\n",
+    "sparsity_tfidf = vec.compute_sparsity(train_tfidf)"
+   ],
+   "outputs": [],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-13T13:57:36.820463Z",
+     "start_time": "2025-11-13T13:57:35.421762Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "train_tokens = [t for t, _ in train_dataset]",
+   "outputs": [],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-13T13:57:38.038530Z",
+     "start_time": "2025-11-13T13:57:38.014719Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(\"Sample cleaned tokens:\", train_tokens[0][:10])\n",
+    "print(\"Vocab size:\", len(vocab.token2idx))\n",
+    "print(\"Train TF shape:\", train_tf.shape)\n",
+    "print(\"Train TF-IDF shape:\", train_tfidf.shape)\n",
+    "print(\"Sparsity TF:\", round(sparsity_tf, 2), \"%\")\n",
+    "print(\"Sparsity TF-IDF:\", round(sparsity_tfidf, 2), \"%\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample cleaned tokens: ['draws', 'and', 'a', 'loss', 'in', 'the', 'league', 'at', 'old', 'trafford']\n",
+      "Vocab size: 17064\n",
+      "Train TF shape: (52298, 17064)\n",
+      "Train TF-IDF shape: (52298, 17064)\n",
+      "Sparsity TF: 99.89 %\n",
+      "Sparsity TF-IDF: 99.89 %\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   },
   {
    "cell_type": "markdown",
